--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,8 @@ message(DEBUG "CMAKE_BUILD_AMADB_CXX_PROTO: ${CMAKE_BUILD_AMADB_CXX_PROTO}")
 message(DEBUG "CMAKE_BUILD_AMACONTROLLER_PY_PROTO: ${CMAKE_BUILD_AMACONTROLLER_PY_PROTO}")
 message(DEBUG "CMAKE_BUILD_AMACONTROLLER_CXX_PROTO: ${CMAKE_BUILD_AMACONTROLLER_CXX_PROTO}")
 message(DEBUG "CMAKE_BUILD_AMAPROCESSOR_PROTO: ${CMAKE_BUILD_AMAPROCESSOR_PROTO}")
-
+message(DEBUG "Protobuf_INCLUDE_DIR: ${Protobuf_INCLUDE_DIR}")
+message(DEBUG "Protobuf_IMPORT_DIRS: ${Protobuf_IMPORT_DIRS}")
 
 # generate pb2_grpc (client and server python classes) to CMAKE_CURRENT_BINARY_DIR directory
 function(protobuf_service_generate_python PY_PROTO PROTOBUF_FILES)
