--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,10 @@ option(CMAKE_BUILD_AMAPROCESSOR_PROTO  "Build amaprocessor protobuf files" OFF )
 
 # Finding dependencies
 find_package(Protobuf REQUIRED)
-find_package(Python3  COMPONENTS Interpreter Development REQUIRED)
+find_package(Python3  COMPONENTS Interpreter REQUIRED)
+if(CMAKE_BUILD_TESTS)
+  find_package(Python3  COMPONENTS Development REQUIRED)
+endif()
 
 # enviroment information
 message(DEBUG "PROJECT_AMAPROTO_VERSION: ${PROJECT_AMAPROTO_VERSION}")
